# ChangeLog for dev-libs/openssl
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.234 2007/10/03 00:12:26 wolf31o2 Exp $

  03 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  openssl-0.9.8e-r3.ebuild:
  Stable on amd64 wrt bug #194039.

  01 Oct 2007; Jeroen Roovers <jer@gentoo.org> openssl-0.9.8e-r3.ebuild:
  Stable for HPPA (bug #194039).

  01 Oct 2007; Roy Marples <uberlord@gentoo.org>
  +files/openssl-0.9.8e-bsd-sparc64.patch, openssl-0.9.8e-r3.ebuild:
  Love the ~sparc-fbsd keyword.

  01 Oct 2007; Raúl Porcel <armin76@gentoo.org> openssl-0.9.8e-r3.ebuild:
  alpha/ia64/sparc stable wrt security #194039

  01 Oct 2007; Joe Peterson <lavajoe@gentoo.org> openssl-0.9.8e-r3.ebuild:
  Add ~x86-fbsd keyword

  01 Oct 2007; Mike Frysinger <vapier@gentoo.org> openssl-0.9.8e-r3.ebuild:
  Tweak how we do the manpage renaming so that it is POSIX friendly #194335 by
  Joe Peterson.

  01 Oct 2007; Joshua Kinard <kumba@gentoo.org> openssl-0.9.8e-r3.ebuild:
  Stable on mips, per #194039.

  30 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  openssl-0.9.8e-r3.ebuild:
  ppc stable, bug #194039

  30 Sep 2007; Markus Meier <maekke@gentoo.org> openssl-0.9.8e-r3.ebuild:
  x86 stable, security bug #194039

  30 Sep 2007; Mike Frysinger <vapier@gentoo.org> openssl-0.9.8e-r3.ebuild:
  We dont actually need the hppa patch anymore as exit() in awk at first match
  makes the head useless.

  30 Sep 2007; Mike Frysinger <vapier@gentoo.org>
  +files/openssl-0.9.8e-make.patch, openssl-0.9.8e-r3.ebuild:
  Fix building on Gentoo/BSD setups where `make` != `$MAKE` #146316.

  30 Sep 2007; Markus Rothe <corsair@gentoo.org> openssl-0.9.8e-r3.ebuild:
  Stable on ppc64; bug #194039

*openssl-0.9.8e-r3 (30 Sep 2007)

  30 Sep 2007; Mike Frysinger <vapier@gentoo.org>
  +files/openssl-0.9.8e-CVE-2007-5135.patch, +openssl-0.9.8e-r3.ebuild:
  Add fix from upstream for CVE-2007-5135 #194039.
