@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/openssl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.234 2007/10/03 00:12:26 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.235 2007/10/07 16:59:38 vapier Exp $
+
+*openssl-0.9.8e-r4 (07 Oct 2007)
+
+  07 Oct 2007; Mike Frysinger <vapier@gentoo.org> +openssl-0.9.8e-r4.ebuild:
+  Enable camellia and mdc2 regardless of USE=bindist #194946 by Justin Foote.
+  Flesh out support for USE="gmp kerberos zlib".
 
   03 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   openssl-0.9.8e-r3.ebuild:
